--- a/package.json
+++ b/package.json
@@ -6,18 +6,24 @@
     "@testing-library/jest-dom": "^5.11.10",
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
+    "@types/enzyme-adapter-react-16": "^1.0.6",
     "@types/jest": "^26.0.22",
     "@types/node": "^12.20.7",
-    "@types/react": "^17.0.3",
+    "@types/react": "^16.13.1",
     "@types/react-dom": "^17.0.3",
+    "@types/redux-mock-store": "^1.0.2",
+    "@types/redux-thunk": "^2.1.0",
     "antd": "^4.15.0",
     "bootstrap": "^4.6.0",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.6",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
     "react-redux": "^7.2.3",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "redux": "^4.0.5",
+    "redux-mock-store": "^1.5.4",
     "redux-saga": "^1.1.3",
     "typescript": "^4.2.3",
     "web-vitals": "^1.1.1"
@@ -30,8 +36,7 @@
   },
   "eslintConfig": {
     "extends": [
-      "react-app",
-      "react-app/jest"
+      "react-app"
     ]
   },
   "browserslist": {
@@ -47,6 +52,7 @@
     ]
   },
   "devDependencies": {
+    "@types/enzyme": "^3.10.8",
     "@types/history": "^4.7.8",
     "@types/react-router-dom": "^5.1.7"
   }
