--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@types/enzyme-adapter-react-16": "^1.0.6",
     "@types/jest": "^26.0.22",
     "@types/node": "^12.20.7",
+    "@types/puppeteer": "^5.4.3",
     "@types/react": "^16.13.1",
     "@types/react-dom": "^17.0.3",
     "@types/redux-mock-store": "^1.0.2",
